--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="sv">
   <head>
-    <meta http-equiv="refresh" content="0; url=https://melinaads.se">
-    <script>
-      window.location.href = "https://melinaads.se";
-    </script>
+    <meta charset="utf-8" />
+    <title>melinaads.com</title>
   </head>
-  <body>
-    Redirecting...
-  </body>
+  <body></body>
 </html>
